# ets2la_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  version.hpp.in  version.rc.in
.github/workflows/: cmake-multi-platform.yml
src/: consts.hpp  core.cpp  core.hpp  main.cpp  patterns.hpp  version.hpp
src/hooks/: function_hook.cpp  function_hook.hpp  hook.cpp  hook.hpp  vtable_hook.cpp  vtable_hook.hpp
src/managers/: hooks_manager.cpp  hooks_manager.hpp
src/memory/: memory_scan.hpp  memory_utils.hpp
src/memory/virtual/: memory_handler.cpp  memory_handler.hpp
src/prism/: common.hpp  functions.hpp  game_actor.cpp  game_actor.hpp  string.hpp  token.hpp
src/prism/camera/: camera_manager.cpp  camera_manager.hpp  core_camera.hpp
src/prism/collections/: array.hpp  array_dyn.hpp  list_dyn.hpp
src/prism/controllers/: base_ctrl.cpp  base_ctrl.hpp  game_ctrl.cpp  game_ctrl.hpp
src/prism/input/: input_mix.hpp
src/prism/management/item/: kdop_item.hpp  node_item.hpp  prefab_item.hpp  (+2 more)
src/prism/navigation/: gps_manager.cpp  gps_manager.hpp  route_source.hpp  route_task.hpp
src/prism/thread/: task.hpp
src/prism/traffic/: game_traffic.cpp  game_traffic.hpp  traffic.hpp  traffic_ai_trailer.hpp  traffic_ai_vehicle.hpp  traffic_objects.hpp  traffic_physics_data.hpp  traffic_rules.hpp  traffic_vehicle.hpp
src/prism/unit/: unit.hpp  unit_descriptor.hpp
src/prism/vehicles/: core_vehicle.hpp  game_physics_vehicle.hpp  game_trailer_actor.cpp  game_trailer_actor.hpp  trailer.hpp  vehicle_shared.cpp  vehicle_shared.hpp
src/sdk/: stores.hpp
